--- a/balsa/pom.xml
+++ b/balsa/pom.xml
@@ -31,14 +31,15 @@
 			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>batik</groupId>
+			<groupId>org.apache.xmlgraphics</groupId>
 			<artifactId>batik-swing</artifactId>
-			<version>1.6-1</version>
+			<version>1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>jgraph</groupId>
 			<artifactId>jgraph</artifactId>
 			<version>5.13.0.0</version>
 		</dependency>
+
 	</dependencies>
 </project>
